# event-streams

./: .gitignore  README.md  event-streams.cabal
app/: Generate.hs  Generator.hs  Index.hs
src/: Data.hs  Generator.hs  Indexer.hs  Loader.hs  Reverser.hs  Transformer.hs
