name:                event-streams
version:             0.1.0.0
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Indexer, Reverser
  build-depends:        
    mtl,
    base >= 4.7 && < 5,
    bytestring,
    containers,
    binary,
    bytestring
  default-language:    Haskell2010

executable generator
  hs-source-dirs:      app
  main-is:             Generator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
    base,
    mtl,
    event-streams,
    bytestring
  default-language:    Haskell2010
