name:                event-streams
version:             0.1.0.0
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data, Generator, Indexer, Loader, Transformer
  build-depends:        
    mtl,
    base >= 4.7 && < 5,
    bytestring,
    containers,
    binary,
    bytestring,
    random
  default-language:    Haskell2010

executable index
  hs-source-dirs:      app
  main-is:             Index.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
    options,
    event-streams,
    base,
    bytestring,
    random

executable generate
  hs-source-dirs:      app
  main-is:             Generate.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
    options,
    event-streams,
    base,
    bytestring,
    random
  default-language:    Haskell2010
